--- a/04_hello_agent/pyproject.toml
+++ b/04_hello_agent/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "crewai>=0.121.1",
+    "openai>=1.75.0",
+    "python-dotenv>=1.1.0",
 ]
 
 [project.scripts]
